# aura-anim-engineering-thesis-project

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  serve_app.py
backend/accounts/dependencies/: __init__.py  dependencies.py
backend/accounts/endpoints/: __init__.py  account_endpoints.py
backend/accounts/exceptions/: __init__.py  exceptions.py
backend/accounts/factories/repositories/: __init__.py  factories.py
backend/accounts/factories/services/: __init__.py  factories.py
backend/accounts/models/: __init__.py  models.py
backend/accounts/repositories/: __init__.py  user_repository.py
backend/accounts/schemas/: __init__.py  api_schemas.py
backend/accounts/services/: __init__.py  user_service.py
backend/api/: __init__.py  video_api.py
backend/api/routes/: __init__.py  accounts_routes.py  auth_routes.py  video_routes.py
backend/auth/dependencies/: __init__.py  dependencies.py
backend/auth/endpoints/: __init__.py  auth_endpoints.py
backend/auth/exceptions/: __init__.py  exceptions.py
backend/auth/factories/services/: __init__.py  factories.py
backend/auth/schemas/: __init__.py  api_schemas.py
backend/auth/services/: __init__.py  auth_service.py
backend/config/: database.yaml
backend/config/components/: frame_interpolator.yaml  frame_upscaler.yaml  pipeline.yaml  video_explore.yaml  video_generator.yaml  video_postprocessor.yaml  video_preprocessor.yaml
backend/config/environments/: development.yaml  production.yaml
backend/config/factories/: __init__.py  factories.py
backend/config/management/: __init__.py  config_manager.py  config_type.py
backend/db/: base.py  initialization.py  manager.py
backend/deployment/: __init__.py  initialization.py
backend/pipeline/: __init__.py  pipeline.py
backend/pipeline/components/: frame_interpolator.py  frame_upscaler.py  video_generator.py  video_postprocessor.py  video_preprocessor.py
backend/pipeline/deployments/: __init__.py  exceptions.py  mixins.py  video_components.py
backend/pipeline/schemas/: __init__.py  component_parameters.py
backend/pipeline/utilities/: __init__.py  parameter_conversion.py
backend/security/: __init__.py  exceptions.py  jwt_manager.py  password_manager.py
backend/static/explore/: .gitignore
backend/storage/client/: __init__.py  client.py
backend/storage/factories/: __init__.py  factories.py
backend/storage/services/: __init__.py  video_storage_service.py
backend/test/: test_components.py
backend/tests/video/: test_video_generation_request.py  test_video_spec_converter.py
backend/video/constants/: __init__.py  job_status.py  video_parameters.py
backend/video/endpoints/: __init__.py  video_endpoints.py
backend/video/factories/repositories/: __init__.py  factories.py
backend/video/factories/services/: __init__.py  factories.py
backend/video/factories/utilities/: __init__.py  factories.py
backend/video/models/: __init__.py  models.py
backend/video/repositories/: __init__.py  video_download_repository.py  video_generation_repository.py  video_job_repository.py
backend/video/schemas/: __init__.py  api_schemas.py  domain_schemas.py
backend/video/services/: __init__.py  video_download_service.py  video_explore_service.py  video_generation_service.py  video_job_service.py
backend/video/utilities/: __init__.py  resolutions.py  video_spec_converter.py
docker/: docker-compose.dev.yaml
docs/: development_guidelines.md
frontend/: .pretterrc  Dockerfile  package.json
frontend/api/: auth.ts  client.ts  user.ts  video.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/docs/: aura-anim.mockoon.json  aura-anim.postman_collection.json
frontend/hooks/: use-job-monitor.ts
frontend/lib/: i18n-context.tsx  mock-data.ts  react-query-provider.tsx
(+43 files in other folders)
